fix text alignment in header dropdown

--- a/centered-header/centeredHeader.css
+++ b/centered-header/centeredHeader.css
@@ -23,3 +23,7 @@
     display: inline-block;
     float: none;
 }
+
+#header .menu li a {
+    text-align: left !important;
+}
